--- a/Proyecto3/Proyecto_3/nbproject/project.properties
+++ b/Proyecto3/Proyecto_3/nbproject/project.properties
@@ -33,9 +33,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto_3
 excludes=
+file.reference.gson-2.2.2.jar.zip=src\\Librerias\\gson-2.2.2.jar.zip
+file.reference.javax.jar.zip=src\\Librerias\\javax.jar.zip
+file.reference.javax.jar_1.zip=src\\Librerias\\javax.jar_1.zip
+file.reference.json-20211205.jar=src\\Librerias\\json-20211205.jar
+file.reference.json-simple-1.1.jar=src\\Librerias\\json-simple-1.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.2.2.jar.zip}:\
+    ${file.reference.javax.jar.zip}:\
+    ${file.reference.javax.jar_1.zip}:\
+    ${file.reference.json-20211205.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
